--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://vladislav.wohlrath.cz/'
 languageCode = 'en-us'
 title = 'Coming soon'
 theme = 'ananke'
