--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,8 @@
 baseURL = 'https://vladislav.wohlrath.cz/'
 languageCode = 'en-us'
 title = 'Coming soon'
-theme = 'ananke'
+theme = 'github.com/theNewDynamic/gohugo-theme-ananke'
+
+[module]
+[[module.imports]]
+    path = 'github.com/theNewDynamic/gohugo-theme-ananke'
